--- a/source/include/config.h.in
+++ b/source/include/config.h.in
@@ -143,6 +143,9 @@
 #undef HAVE_GETSPNAM
 #undef HAVE_BIGCRYPT
 #undef HAVE_GETPRPWNAM
+#undef HAVE_FSTAT64
+#undef HAVE_LSTAT64
+#undef HAVE_STAT64
 
 /* The number of bytes in a int.  */
 #undef SIZEOF_INT
@@ -408,6 +411,9 @@
 /* Define if you have the fseek64 function.  */
 #undef HAVE_FSEEK64
 
+/* Define if you have the fseeko64 function.  */
+#undef HAVE_FSEEKO64
+
 /* Define if you have the fstat function.  */
 #undef HAVE_FSTAT
 
@@ -419,6 +425,9 @@
 
 /* Define if you have the ftell64 function.  */
 #undef HAVE_FTELL64
+
+/* Define if you have the ftello64 function.  */
+#undef HAVE_FTELLO64
 
 /* Define if you have the ftruncate function.  */
 #undef HAVE_FTRUNCATE
@@ -572,6 +581,9 @@
 
 /* Define if you have the stat64 function.  */
 #undef HAVE_STAT64
+
+/* Define if you have the strcasecmp function.  */
+#undef HAVE_STRCASECMP
 
 /* Define if you have the strchr function.  */
 #undef HAVE_STRCHR
