Samba 2.0 wasn't building on Linux-alpha - so I added HAVE_SETRESGID and HAVE_SETRESGID_DECL defines, based on the HAVE_SETRESUID checks. I also updated the places that setresgid was being called based on HAVE_SETRESUID being defined and made sure *both* were defined before allowing the call. Jeremy.

--- a/source/include/config.h.in
+++ b/source/include/config.h.in
@@ -146,6 +146,8 @@
 #undef HAVE_FSTAT64
 #undef HAVE_LSTAT64
 #undef HAVE_STAT64
+#undef HAVE_SETRESGID
+#undef HAVE_SETRESGID_DECL
 
 /* The number of bytes in a int.  */
 #undef SIZEOF_INT
