--- a/packaging/Caldera/makefile-path.patch
+++ b/packaging/Caldera/makefile-path.patch
@@ -1,43 +1,34 @@
---- samba-2.0.0/source/Makefile.in.orig	Wed Nov 18 09:58:38 1998
-+++ samba-2.0.0/source/Makefile.in	Wed Nov 18 23:32:58 1998
-@@ -24,7 +24,7 @@
+--- samba-2.0.0/source/Makefile.in.orig	Tue Dec  1 22:32:20 1998
++++ samba-2.0.0/source/Makefile.in	Wed Dec  2 17:11:33 1998
+@@ -25,9 +25,9 @@
  BINDIR = @bindir@
- SBINDIR = @sbindir@
+ # we don't use sbindir because we want full compatibility with
+ # the previous releases of Samba
+-SBINDIR = @bindir@
++SBINDIR = @sbindir@
  LIBDIR = @libdir@
--VARDIR = $(BASEDIR)/var
-+VARDIR = /var
+-VARDIR = @localstatedir@
++VARDIR = /var/log/samba
  MANDIR = @mandir@
  
  # The permissions to give the executables
-@@ -33,23 +33,23 @@
- # set these to where to find various files
- # These can be overridden by command line switches (see smbd(8))
- # or in smb.conf (see smb.conf(5))
--SMBLOGFILE = $(VARDIR)/log.smb
--NMBLOGFILE = $(VARDIR)/log.nmb
-+SMBLOGFILE = $(VARDIR)/log/samba/log.smb
-+NMBLOGFILE = $(VARDIR)/log/samba/log.nmb
- CONFIGFILE = $(LIBDIR)/smb.conf
- LMHOSTSFILE = $(LIBDIR)/lmhosts
+@@ -43,16 +43,16 @@
  DRIVERFILE = $(LIBDIR)/printers.def
  PASSWD_PROGRAM = /bin/passwd
--SMB_PASSWD_FILE = $(BASEDIR)/private/smbpasswd
--SMB_PASSGRP_FILE = $(BASEDIR)/private/smbpassgrp
--SMB_GROUP_FILE = $(BASEDIR)/private/smbgroup
--SMB_ALIAS_FILE = $(BASEDIR)/private/smbalias
-+SMB_PASSWD_FILE = $(LIBDIR)/smbpasswd
-+SMB_PASSGRP_FILE = $(LIBDIR)/smbpassgrp
-+SMB_GROUP_FILE = $(LIBDIR)/smbgroup
-+SMB_ALIAS_FILE = $(LIBDIR)/smbalias
- SMB_PASSWD_PROGRAM = $(BASEDIR)/bin/smbpasswd
+ # This is where smbpasswd et al go
+-PRIVATEDIR = @privatedir@
++PRIVATEDIR = $(LIBDIR)
+ 
+ SMB_PASSWD_FILE = $(PRIVATEDIR)/smbpasswd
+ SMB_PASSGRP_FILE = $(PRIVATEDIR)/smbpassgrp
  
  # This is where SWAT images and help files go
--SWATDIR = $(BASEDIR)/swat
-+SWATDIR = $(BASEDIR)/share/swat
+-SWATDIR = @swatdir@
++SWATDIR = /usr/share/swat
  
  # the directory where lock files go
 -LOCKDIR = $(VARDIR)/locks
-+LOCKDIR = $(VARDIR)/lock/samba
++LOCKDIR = /var/lock/samba
  
  # The directory where code page definition files go
  CODEPAGEDIR = $(LIBDIR)/codepages
