--- a/source3/configure.in
+++ b/source3/configure.in
@@ -775,6 +775,7 @@ AC_ARG_WITH(ldap,
   yes)
     AC_MSG_RESULT(yes)
     AC_DEFINE(WITH_LDAP)
+    LIBS="$LIBS -lldap -llber"
     ;;
   *)
     AC_MSG_RESULT(no)
