--- a/source/configure.in
+++ b/source/configure.in
@@ -1039,7 +1039,7 @@ AC_SUBST(QUOTAOBJS)
 #################################################
 # set private directory location
 AC_ARG_WITH(privatedir,
-[  --with-privatedir=DIR     Where to put smbpasswd ($(prefix)/private)],
+[  --with-privatedir=DIR     Where to put smbpasswd ($ac_default_prefix/private)],
 [ case "$withval" in
   yes|no)
   #
@@ -1060,7 +1060,7 @@ AC_ARG_WITH(privatedir,
 #################################################
 # set SWAT directory location
 AC_ARG_WITH(swatdir,
-[  --with-swatdir=DIR     Where to put SWAT files ($(prefix)/swat)],
+[  --with-swatdir=DIR     Where to put SWAT files ($ac_default_prefix/swat)],
 [ case "$withval" in
   yes|no)
   #
