--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -126,6 +126,7 @@ RPC_SERVER_OBJ = \
 		rpc_server/srv_reg.o \
 		rpc_server/srv_samr.o \
 		rpc_server/srv_srvsvc.o \
+		rpc_server/srv_svcctl.o \
 		rpc_server/srv_pipe.o \
 		rpc_server/srv_lookup.o \
 		rpc_server/srv_wkssvc.o
@@ -134,7 +135,8 @@ RPC_PARSE_OBJ = rpc_parse/parse_lsa.o rpc_parse/parse_misc.o \
                 rpc_parse/parse_net.o rpc_parse/parse_prs.o \
                 rpc_parse/parse_reg.o rpc_parse/parse_rpc.o \
                 rpc_parse/parse_samr.o rpc_parse/parse_srv.o \
-                rpc_parse/parse_wks.o rpc_parse/parse_sec.o
+                rpc_parse/parse_wks.o rpc_parse/parse_sec.o \
+		rpc_parse/parse_svc.o
 
 RPC_CLIENT_OBJ = \
 		rpc_client/cli_login.o    \
