--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -146,6 +146,7 @@ RPC_CLIENT_OBJ = \
 		rpc_client/cli_lsarpc.o   \
 		rpc_client/cli_wkssvc.o   \
 		rpc_client/cli_srvsvc.o   \
+		rpc_client/cli_svcctl.o \
 		rpc_client/cli_samr.o 
 
 
@@ -234,6 +235,7 @@ RPCCLIENT_OBJ = rpcclient/rpcclient.o \
              rpcclient/cmd_samr.o \
              rpcclient/cmd_reg.o \
              rpcclient/cmd_srvsvc.o \
+             rpcclient/cmd_svcctl.o \
              rpcclient/cmd_netlogon.o \
              $(PARAM_OBJ) $(LIBSMB_OBJ) $(UBIQX_OBJ) $(LIB_OBJ) \
              $(RPC_CLIENT_OBJ) $(RPC_PARSE_OBJ) $(PASSDB_OBJ)
