I got sick of the debate with luke about the SID and nmbd so I just went ahead and removed the offending code from nmbd_processlogon(). If luke ever goes back to that dark alley and manages to find the nmbd packet type which needs a SID in the reply then we can reconsider.
This also means we don't need the password database code linked into
nmbd, which is a blessing, and nmbd will startup without smbd.

while I'm looking at this, why do RPCTORTURE_OBJ and RPCCLIENT_OBJ
include the password database code? Maybe Luke just likes that code a
lot and wants it in as many binaries as possible :)

--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -169,7 +169,7 @@ NMBD_OBJ1 = nmbd/asyncdns.o nmbd/nmbd.o nmbd/nmbd_become_dmb.o \
             nmbd/nmbd_workgroupdb.o nmbd/nmbd_synclists.o
 
 NMBD_OBJ = $(NMBD_OBJ1) $(PARAM_OBJ) $(LIBSMB_OBJ) $(UBIQX_OBJ) \
-           $(PASSDB_OBJ) $(LIB_OBJ)
+           $(LIB_OBJ)
 
 SWAT_OBJ = web/cgi.o web/diagnose.o web/startstop.o web/statuspage.o \
            web/swat.o $(LIBSMB_OBJ) $(LOCKING_OBJ) \
