--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -174,7 +174,7 @@ NMBD_OBJ = $(NMBD_OBJ1) $(PARAM_OBJ) $(LIBSMB_OBJ) $(UBIQX_OBJ) \
 SWAT_OBJ = web/cgi.o web/diagnose.o web/startstop.o web/statuspage.o \
            web/swat.o $(LIBSMB_OBJ) $(LOCKING_OBJ) \
            $(PARAM_OBJ) $(PASSDB_OBJ) $(RPC_CLIENT_OBJ) $(RPC_PARSE_OBJ) \
-           $(UBIQX_OBJ) $(LIB_OBJ)
+           $(UBIQX_OBJ) $(LIB_OBJ) $(PRINTING_OBJ)
 
 SMBRUN_OBJ = utils/smbrun.o
 
