--- a/source/include/config.h.in
+++ b/source/include/config.h.in
@@ -149,6 +149,7 @@
 #undef HAVE_STAT64
 #undef HAVE_SETRESGID
 #undef HAVE_SETRESGID_DECL
+#undef HAVE_SHADOW_H
 
 /* The number of bytes in a int.  */
 #undef SIZEOF_INT
