--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -109,7 +109,7 @@ LIB_OBJ = lib/charcnv.o lib/charset.o lib/debug.o lib/fault.o \
 
 
 UBIQX_OBJ = ubiqx/ubi_BinTree.o ubiqx/ubi_Cache.o ubiqx/ubi_SplayTree.o \
-            ubiqx/ubi_dLinkList.o ubiqx/ubi_sLinkList.o ubiqx/debugparse.o
+            ubiqx/ubi_dLinkList.o ubiqx/ubi_sLinkList.o
 
 PARAM_OBJ = param/loadparm.o param/params.o 
 
@@ -275,8 +275,6 @@ RPCTORTURE_OBJ = utils/rpctorture.o \
              $(RPC_CLIENT_OBJ) $(RPC_PARSE_OBJ) \
 		$(PASSDB_OBJ) 
 
-DEBUG2HTML_OBJ = utils/debug2html.o ubiqx/debugparse.o
-
 PROTO_OBJ = $(SMBD_OBJ) $(NMBD_OBJ) $(SWAT_OBJ) $(CLIENT_OBJ) \
 	    $(RPCCLIENT_OBJ) $(SMBWRAPPER_OBJ)
 
@@ -294,8 +292,6 @@ smbwrapper : CHECK bin/smbsh bin/smbwrapper.so @WRAP32@
 smbtorture : CHECK bin/smbtorture
 
 rpctorture : CHECK bin/rpctorture
-
-debug2html : CHECK bin/debug2html
 
 .SUFFIXES:
 .SUFFIXES: .c .o .po .po32
@@ -433,10 +429,6 @@ bin/smbtorture: $(SMBTORTURE_OBJ) bin/.dummy
 bin/rpctorture: $(RPCTORTURE_OBJ) bin/.dummy
 	@echo Linking $@
 	@$(CC) $(FLAGS) -o $@ $(RPCTORTURE_OBJ) $(LDFLAGS) $(LIBS)
-
-bin/debug2html: $(DEBUG2HTML_OBJ) bin/.dummy
-	@echo Linking $@
-	@$(CC) $(FLAGS) -o $@ $(DEBUG2HTML_OBJ) $(LDFLAGS) $(LIBS)
 
 bin/smbwrapper.so: $(PICOBJS)
 	@echo Linking shared library $@
