and in head branch:
make sure we include sys/mman.h if available

--- a/source/include/config.h.in
+++ b/source/include/config.h.in
@@ -723,6 +723,9 @@
 /* Define if you have the <sys/ioctl.h> header file.  */
 #undef HAVE_SYS_IOCTL_H
 
+/* Define if you have the <sys/mman.h> header file.  */
+#undef HAVE_SYS_MMAN_H
+
 /* Define if you have the <sys/mode.h> header file.  */
 #undef HAVE_SYS_MODE_H
 
