(inet_aton): also chedk NEED_INET_ATON_PROTO
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5268 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/roken.h.in
+++ b/lib/roken/roken.h.in
@@ -234,8 +234,7 @@ char *hstrerror(int herr);
 extern int h_errno;
 #endif
 
-#ifndef HAVE_INET_ATON
-/* Minimal implementation of inet_aton. Doesn't handle hex numbers. */
+#if !defined(HAVE_INET_ATON) || defined(NEED_INET_ATON_PROTO)
 int inet_aton(const char *cp, struct in_addr *adr);
 #endif
 
