--- a/source/include/config.h.in
+++ b/source/include/config.h.in
@@ -552,8 +552,14 @@
 /* Define if you have the set_auth_parameters function.  */
 #undef HAVE_SET_AUTH_PARAMETERS
 
+/* Define if you have the setegid function.  */
+#undef HAVE_SETEGID
+
 /* Define if you have the setenv function.  */
 #undef HAVE_SETENV
+
+/* Define if you have the seteuid function.  */
+#undef HAVE_SETEUID
 
 /* Define if you have the setgroups function.  */
 #undef HAVE_SETGROUPS
@@ -563,6 +569,12 @@
 
 /* Define if you have the setnetgrent function.  */
 #undef HAVE_SETNETGRENT
+
+/* Define if you have the setregid function.  */
+#undef HAVE_SETREGID
+
+/* Define if you have the setreuid function.  */
+#undef HAVE_SETREUID
 
 /* Define if you have the setsid function.  */
 #undef HAVE_SETSID
