mkstemp: add prototype
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5272 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/roken.h.in
+++ b/lib/roken/roken.h.in
@@ -300,6 +300,11 @@ ssize_t
 readv(int d, const struct iovec *iov, int iovcnt);
 #endif
 
+#ifndef HAVE_MKSTEMP
+int
+mkstemp(char *template);
+#endif
+
 #ifndef HAVE_FLOCK
 #ifndef LOCK_SH
 #define LOCK_SH   1		/* Shared lock */
