--- a/source/include/config.h.in
+++ b/source/include/config.h.in
@@ -58,6 +58,7 @@
    byte first (like Motorola and SPARC, unlike Intel and VAX).  */
 #undef WORDS_BIGENDIAN
 
+#undef HAVE_VOLATILE
 #undef HAVE_BROKEN_READDIR
 #undef HAVE_ERRNO_DECL
 #undef HAVE_LONGLONG
@@ -65,6 +66,7 @@
 #undef HAVE_REMSH
 #undef HAVE_UNSIGNED_CHAR
 #undef HAVE_UTIMBUF
+#undef HAVE_SIG_ATOMIC_T_TYPE
 #undef ssize_t
 #undef ino_t
 #undef ssize_t
