Fixed error in Sun2.6/gcc2.7 compile tests. Jeremy.

--- a/source/configure.in
+++ b/source/configure.in
@@ -90,7 +90,7 @@ case "$host_os" in
 				ac_cv_gcc_compiler_version_number=`grep 'gcc version' conftest.c`
 				rm -fr conftest.c
 				case "$ac_cv_gcc_compiler_version_number" in
-					"*gcc version 2.6*"|"*gcc version 2.7*")
+					*"gcc version 2.6"*|*"gcc version 2.7"*)
 						CPPFLAGS="$CPPFLAGS -D_LARGEFILE64_SOURCE"
 						;;
 					*)
